--- a/git-parallel.1
+++ b/git-parallel.1
@@ -61,25 +61,41 @@ $ tree -L 1
 .PP
 Author
 .PP
-Copyright (c) 2013 Hiroshi IKEGAMI
+Copyright (c) 2013 - 2021 Hiroshi IKEGAMI
 .PP
 MIT License
 .PP
 Permission is hereby granted, free of charge, to any person obtaining
+.br
 a copy of this software and associated documentation files (the
+.br
 "Software"), to deal in the Software without restriction, including
+.br
 without limitation the rights to use, copy, modify, merge, publish,
+.br
 distribute, sublicense, and/or sell copies of the Software, and to
+.br
 permit persons to whom the Software is furnished to do so, subject to
+.br
 the following conditions:
+.br
 .PP
 The above copyright notice and this permission notice shall be
+.br
 included in all copies or substantial portions of the Software.
+.br
 .PP
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+.br
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+.br
 MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+.br
 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+.br
 LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+.br
 OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+.br
 WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+.br
