--- a/git-parallel.1
+++ b/git-parallel.1
@@ -1,69 +1,49 @@
+.nh
 .TH git\-parallel
 .SH NAME
 .PP
 git\-parallel \- Run the command in parallel much to multiple repositories
-.SH Synopsis
-.RS
-.IP \(bu 2
-git\-parallel [\-h] [\-n] [\-j <jobs>] [\-e <command>]
-.RE
+
 .SH Usage
 .PP
 .RS
+
 .nf
-git-parallel commands are:  
-    -h  show help  
-    -c  put a color on the result  
-    -j  max job count  
-    -e  command to be executed  
-.fi
-.RE
-.PP
+USAGE:
+
+  git\-parallel [OPTIONS] \-\- [GITCMD|:::CMD] # Run the command in parallel much to multiple repositories.
+
+OPTIONS:
+
+  * [\-h|\-\-help]                             # Show this help.
+  * [\-j|\-\-jobs] job\-count                   # Execute in parallel with \\`job\-count\\`
+  * [\-m|\-\-maxdepth] depth\-count             # Search target git\-repositories in maxdepth.
+  * [\-V|\-\-version]                          # Show git\-parallel version info.
+  * [\-c|\-\-color] auto|always|never          # Configure output color.
+  * [\-l|\-\-list]                             # List up target git repositories.
+  * [\-q|\-\-silent]                           # Execute silent. (no output)
+  * [\-v|\-\-verbose]                          # Execute verbose. (default.)
+  * [\-d|\-\-targets] target\-derectory         # Specified target git\-repositories
+  * [\-F|\-\-freeze] repository\-path           # Generate .git\-parallel.freeze file.
+
 ex)
-.PP
-.RS
-.nf
-$ git parallel -c -j 4 -e "pull --rebase"
+
+    git parallel \-\-color \-jobs 2 \-\-silent \-\- pull \-\-rebase
+
+    git parallel \-\-maxdepth 3 \-jobs 4 \-\- ::: ls \-lha
+
 .fi
 .RE
-.SH What's this?
-.PP
-This command is executed in parallel to the git repository in the current directory directly under.
-.PP
-.RS
-.nf
-$ tree -L 1
-.
-├── git_repo1
-├── git_repo2
-├── git_repo3
-├── git_repo4
-├── not_git_repo -> command not execute!
-├── git_repo5
-├── git_repo6
-└── git_repo7
-.fi
-.RE
-.PP
-However repository to the presence of the file named .git\-freeze is ignored.
-.PP
-.RS
-.nf
-$ $(cd git_repo1 && touch .git-freeze)
-$ tree -L 1
-.
-├── git_repo1 -> command not execute!
-├── git_repo2
-├── git_repo3
-└── git_repo4
-.fi
-.RE
+
 .PP
 Author
+
 .PP
-Copyright (c) 2013 - 2021 Hiroshi IKEGAMI
+Copyright (c) 2013 \- 2021 Hiroshi IKEGAMI
+
 .PP
 MIT License
+
 .PP
 Permission is hereby granted, free of charge, to any person obtaining
 .br
@@ -79,11 +59,13 @@ permit persons to whom the Software is furnished to do so, subject to
 .br
 the following conditions:
 .br
+
 .PP
 The above copyright notice and this permission notice shall be
 .br
 included in all copies or substantial portions of the Software.
 .br
+
 .PP
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 .br
