--- a/git-parallel.1
+++ b/git-parallel.1
@@ -28,9 +28,9 @@ OPTIONS:
 
 ex)
 
-    git parallel \-\-color \-jobs 2 \-\-silent \-\- pull \-\-rebase
+    git parallel \-\-color auto \-\-jobs 2 \-\-silent \-\- pull \-\-rebase
 
-    git parallel \-\-maxdepth 3 \-jobs 4 \-\- ::: ls \-lha
+    git parallel \-\-maxdepth 3 \-\-jobs 4 \-\- ::: ls \-lha
 
 .fi
 .RE
